php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29607 highlight_file producing incorrect output
Submitted: 2004-08-10 23:25 UTC Modified: 2005-10-13 19:18 UTC
Votes:2
Avg. Score:4.0 ± 1.0
Reproduced:2 of 2 (100.0%)
Same Version:1 (50.0%)
Same OS:1 (50.0%)
From: phpbugrep200408 at pgregg dot com Assigned: iliaa (profile)
Status: Closed Package: Strings related
PHP Version: 5CVS-2005-09-15 (snap) OS: *
Private report: No CVE-ID: None
 [2004-08-10 23:25 UTC] phpbugrep200408 at pgregg dot com
Description:
------------
I found an error in how application/x-httpd-php-source produces its output.

The following example shows this in operation:

Raw file: http://www.pgregg.com/code/sprintf_heredoc.txt
phps ver: http://www.pgregg.com/code/sprintf_heredoc.phps

Both the txt and phps filenames are symlinks to the .php file.

Normally, a missing newline would be nothing to write home about, but in this instance it breaks the functionality of the script.



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-08-11 08:16 UTC] derick@php.net
Verified
 [2004-08-12 00:38 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2005-09-15 02:30 UTC] phpbugrep200408 at pgregg dot com
Reopening this bug as it has resurfaced.
Confirmed to be in 5.1b2 and 5.1RC1
 [2005-09-15 09:29 UTC] sniper@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5-win32-latest.zip


 [2005-09-15 11:29 UTC] phpbugrep200408 at pgregg dot com
Built: php5-200509150830 phpinfo gives: 5.1.0RC2-dev
Running on www.pgregg.com

Bug is still present.

Examples:
Raw file: http://www.pgregg.com/code/sprintf_heredoc.txt
phps ver: http://www.pgregg.com/code/sprintf_heredoc.phps

http://www.pgregg.com/projects/php/mime_email/GenerateMIMEMail.inc.php.txt
http://www.pgregg.com/projects/php/mime_email/GenerateMIMEMail.inc.phps

Look for the freakish looking heredocs.
 [2005-09-15 14:11 UTC] sniper@php.net
Ilia, you fixed this last time, so you propably know where to look for the bug :)

 [2005-09-21 12:08 UTC] phpbugrep200408 at pgregg dot com
Just additional info.
Related bug - same issue: http://bugs.php.net/bug.php?id=31371

Ilia keeps fixing this and it keeps getting broken again from PHP4 through to current version - I'd be slapping someone's head by now ;)
 [2005-10-13 19:18 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Works fine in latest CVS for both examples shown.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 19 11:00:01 2026 UTC