MFH: Fixed bug #29607 (highlighting code with HEREDOC produces invalid output).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@166087 c90b9560-bf6c-de11-be94-00142212c4b1